@@ -1,5 +1,7 @@
 plugins {
-  id "com.github.ben-manes.versions" version "0.42.0"
+  id "com.github.ben-manes.versions" version "0.46.0"
+  id 'java-library'
+  id 'application'
   id 'maven-publish'
   id 'signing'
 }
@@ -8,15 +10,13 @@ repositories {
     mavenLocal()
     mavenCentral()
     maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
+    maven { url 'https://s01.oss.sonatype.org/content/repositories/snapshots' }
 }
 
-ext.junitJupiterVersion = '5.9.1'
+ext.junitJupiterVersion = '5.9.2'
 
-apply plugin: 'java-library'
-apply plugin: 'application'
-
-group = 'com.github.calimero'
-version = '2.6-SNAPSHOT'
+group = 'io.calimero'
+version = '3.0-SNAPSHOT'
 
 sourceCompatibility = 19
 targetCompatibility = 19
@@ -24,20 +24,23 @@ targetCompatibility = 19
 java {
     withSourcesJar()
     withJavadocJar()
+
+    registerFeature('serial') {
+        usingSourceSet(sourceSets.main)
+    }
+    registerFeature('usb') {
+        usingSourceSet(sourceSets.main)
+    }
 }
 
-tasks.withType(JavaExec) { jvmArgs += "--enable-preview" }
-
-tasks.withType(Test) { jvmArgs += "--enable-preview" }
-
-tasks.withType(Jar) {
-	from("${projectDir}") {
+tasks.withType(Jar).configureEach {
+    from("${projectDir}") {
         include 'LICENSE.txt'
         into "META-INF"
     }
-    if (name.equals('sourcesJar')) {
-    	from("${projectDir}") {
-		    include 'README.md'
+    if (name == 'sourcesJar') {
+        from("${projectDir}") {
+            include 'README.md'
         }
     }
 }
@@ -46,17 +49,19 @@ compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
 javadoc.options.encoding = 'UTF-8'
 
-mainClassName = 'tuwien.auto.calimero.server.Launcher'
+application {
+    mainModule = "io.calimero.server"
+    mainClass = 'io.calimero.server.Launcher'
+}
 
 run {
-    // for passing program arguments, use -Dexec.args="..."
-    args System.getProperty("exec.args", "").split() 
+	// allows to pass -Djava.util.logging.config.file=resources/logging.properties
+	systemProperties System.properties
     standardInput = System.in
 }
 
 compileJava.options*.compilerArgs = [
-	'-Xlint:all,-serial',
-	'--enable-preview',
+	'-Xlint:all,-serial'
 ]
 
 compileTestJava.options*.compilerArgs = [
@@ -64,6 +69,10 @@ compileTestJava.options*.compilerArgs = [
 	'-Xlint:-try',
 	'--enable-preview',
 ]
+
+tasks.named('compileJava') {
+    options.javaModuleVersion = provider { project.version }
+}
 
 sourceSets {
     main {
@@ -77,35 +86,48 @@ sourceSets {
     }
 }
 
-tasks.withType(Javadoc) {
+tasks.withType(Javadoc).configureEach {
     options.addStringOption("Xdoclint:-missing", '-quiet')
     options.addBooleanOption('-enable-preview', true)
 	options.addStringOption("-release", "${targetCompatibility}")
-}
-
-jar {
-	manifest {
-		attributes 'Main-Class': mainClassName
-	}
 }
 
 test {
 	useJUnitPlatform()
 }
 
+def addReads = [ "--add-reads", "io.calimero.core=io.calimero.server", // @LinkEvent
+                 "--add-reads", "io.calimero.serial.provider.rxtx=ALL-UNNAMED",
+                 "--add-reads", "io.calimero.usb.provider.javax=ALL-UNNAMED" ]
+
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += addReads
+}
+
+startScripts {
+    defaultJvmOpts = addReads
+}
+
 dependencies {
-    api "com.github.calimero:calimero-core-loom:${version}"
-    api "com.github.calimero:calimero-device-loom:${version}"
+    api "io.calimero:calimero-core-loom:${version}"
+    api "io.calimero:calimero-device-loom:${version}"
 
-    implementation 'org.slf4j:slf4j-api:1.7.36'
-    runtimeOnly 'org.slf4j:slf4j-simple:1.7.36'
+//	runtimeOnly 'org.slf4j:slf4j-jdk-platform-logging:2.0.4'
 
-    runtimeOnly "com.github.calimero:calimero-rxtx:${version}"
+	serialRuntimeOnly "io.calimero:calimero-rxtx:${version}"
+	serialRuntimeOnly "io.calimero:serial-native:${version}"
+	usbRuntimeOnly "io.calimero:calimero-usb:${version}"
 
-	testImplementation "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
-	testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}"
-	testCompileOnly 'junit:junit:4.13.2'
-	testRuntimeOnly "org.junit.vintage:junit-vintage-engine:${junitJupiterVersion}"
+	testImplementation "org.junit.jupiter:junit-jupiter:${junitJupiterVersion}"
+}
+
+jar {
+	manifest {
+		attributes(
+			'Main-Class': application.mainClass,
+			'Class-Path': configurations.runtimeClasspath.collect { it.getName() }.join(' ')
+		)
+	}
 }
 
 publishing {
@@ -131,7 +153,7 @@ publishing {
                     }
                 }
                 scm {
-                    connection = 'scm:git:git://github.com:calimero-project/calimero-server.git'
+                    connection = 'scm:git:git://github.com/calimero-project/calimero-server.git'
                     url = 'https://github.com/calimero-project/calimero-server.git'
                 }
             }
@@ -140,8 +162,8 @@ publishing {
     repositories {
         maven {
             name 'maven'
-            def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
-            def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
+            def releasesRepoUrl = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2"
+            def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots"
             url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
             credentials(PasswordCredentials)
         }
